@@ -260,11 +260,10 @@ class PDF::Reader
     # Begin processing the document
     def document (root)
       if root[:Metadata]
-        obj, stream = @xref.object(root[:Metadata])
-        callback(:xml_metadata,stream) 
+        callback(:xml_metadata,@xref.object(root[:Metadata])) 
       end
       callback(:begin_document, [root])
-      walk_pages(@xref.object(root[:Pages]).first)
+      walk_pages(@xref.object(root[:Pages]))
       callback(:end_document)
     end
     ################################################################################
@@ -280,26 +279,24 @@ class PDF::Reader
       # extract page content
       if page[:Type] == :Pages
         callback(:begin_page_container, [page])
-        walk_resources(@xref.object(res).first) if res
-        page[:Kids].each {|child| walk_pages(@xref.object(child).first)}
+        walk_resources(@xref.object(res)) if res
+        page[:Kids].each {|child| walk_pages(@xref.object(child))}
         callback(:end_page_container)
       elsif page[:Type] == :Page
         callback(:begin_page, [page])
-        walk_resources(@xref.object(res).first) if res
+        walk_resources(@xref.object(res)) if res
         @page = page
         @params = []
 
-        if page[:Contents].kind_of?(Array)
-          contents = page[:Contents]
-        elsif @xref.obj_type(page[:Contents]) == :Array
-          contents, stream = @xref.object(page[:Contents])
+        if @xref.object(page[:Contents]).kind_of?(Array)
+          contents = @xref.object(page[:Contents])
         else
           contents = [page[:Contents]]
         end
         
         contents.each do |content|
-          obj, stream = @xref.object(content)
-          content_stream(stream)
+          obj = @xref.object(content)
+          content_stream(obj)
         end if page.has_key?(:Contents) and page[:Contents]
 
         callback(:end_page)
@@ -356,42 +353,41 @@ class PDF::Reader
 
       # extract any xobject information
       if resources[:XObject]
-        @xref.object(resources[:XObject]).first.each do |name, val|
-          obj, stream = @xref.object(val)
-          callback(:resource_xobject, [name, obj, stream])
+        @xref.object(resources[:XObject]).each do |name, val|
+          callback(:resource_xobject, [name, @xref.object(val)])
         end
       end
 
       # extract any extgstate information
       if resources[:ExtGState]
-        @xref.object(resources[:ExtGState]).first.each do |name, val|
-          callback(:resource_extgstate, [name, @xref.object(val).first])
+        @xref.object(resources[:ExtGState]).each do |name, val|
+          callback(:resource_extgstate, [name, @xref.object(val)])
         end
       end
 
       # extract any colorspace information
       if resources[:ColorSpace]
-        @xref.object(resources[:ColorSpace]).first.each do |name, val|
-          callback(:resource_colorspace, [name, @xref.object(val).first])
+        @xref.object(resources[:ColorSpace]).each do |name, val|
+          callback(:resource_colorspace, [name, @xref.object(val)])
         end
       end
 
       # extract any pattern information
       if resources[:Pattern]
-        @xref.object(resources[:Pattern]).first.each do |name, val|
-          callback(:resource_pattern, [name, @xref.object(val).first])
+        @xref.object(resources[:Pattern]).each do |name, val|
+          callback(:resource_pattern, [name, @xref.object(val)])
         end
       end
 
       # extract any font information
       if resources[:Font]
-        @xref.object(resources[:Font]).first.each do |label, desc|
-          desc = @xref.object(desc).first
+        @xref.object(resources[:Font]).each do |label, desc|
+          desc = @xref.object(desc)
           @fonts[label] = PDF::Reader::Font.new
           @fonts[label].label = label
           @fonts[label].subtype = desc[:Subtype] if desc[:Subtype]
           @fonts[label].basefont = desc[:BaseFont] if desc[:BaseFont]
-          @fonts[label].encoding = PDF::Reader::Encoding.factory(@xref.object(desc[:Encoding]).first)
+          @fonts[label].encoding = PDF::Reader::Encoding.factory(@xref.object(desc[:Encoding]))
           @fonts[label].descendantfonts = desc[:DescendantFonts] if desc[:DescendantFonts]
           if desc[:ToUnicode]
             # this stream is a cmap
@@ -409,13 +405,11 @@ class PDF::Reader
     # Convert any PDF::Reader::Resource objects into a real object 
     def resolve_references(obj)
       case obj
+      when PDF::Reader::Stream then 
+        obj.hash = resolve_references(obj.hash)
+        obj
       when PDF::Reader::Reference then 
-        obj, stream = @xref.object(obj)
-        if stream
-          stream
-        else
-          resolve_references(obj)
-        end
+        resolve_references(@xref.object(obj))
       when Hash                   then obj.each { |key,val| obj[key] = resolve_references(val) }
       when Array                  then obj.collect { |item| resolve_references(item) }
       else
