@@ -61,15 +61,11 @@ class PDF::Reader
     #
     # If the object is a stream, that is returned as well
     def object (ref, save_pos = true)
-      return ref, nil unless ref.kind_of?(Reference)
+      return ref unless ref.kind_of?(Reference)
       pos = @buffer.pos if save_pos
-      obj, stream = Parser.new(@buffer.seek(offset_for(ref)), self).object(ref.id, ref.gen)
+      obj = Parser.new(@buffer.seek(offset_for(ref)), self).object(ref.id, ref.gen)
       @buffer.seek(pos) if save_pos
-      if stream
-        return [obj, stream]
-      else
-        return [obj, nil]
-      end
+      return obj
     end
     ################################################################################
     # Assumes the underlying buffer is positioned at the start of an Xref table and
@@ -112,7 +108,7 @@ class PDF::Reader
     end
     # returns the type of object a ref points to
     def obj_type(ref)
-      obj, stream = object(ref)
+      obj = object(ref)
       obj.class.to_s.to_sym
     end
     # returns true if the supplied references points to an object with a stream
