@@ -25,9 +25,9 @@ context "The PDF::Reader::Parser class" do
     xref = PDF::Reader::XRef.new(buffer)
     buffer.seek(1445)
     parser = PDF::Reader::Parser.new(buffer, xref)
-    obj, stream = parser.object(7, 0)
-    obj.should be_a_kind_of(Hash)
-    stream.should eql(decoded_stream)
+    obj = parser.object(7, 0)
+    obj.should be_a_kind_of(PDF::Reader::Stream)
+    obj.should eql(decoded_stream)
   end
 
   # TODO: replace the next spec with this pending one
